# Xylux

./: .gitignore  .markdownlint.json  Cargo.toml  LICENSE.md  README.md  SPECIALIZED_TOOLS_TEST.md  Xylux.desktop  build.rs  clippy.toml  config_example.ini  deny.toml  example.alux  example.rs  rustfmt.toml  test_editor.txt  test_tools.sh
assets/: syntax_config.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_load.rs
src/: ansi_escape.rs  config.rs  editor.rs  error.rs  ide.rs  lib.rs  main.rs  row.rs  syntax.rs  terminal.rs  unix.rs  wasi.rs  windows.rs  xdg.rs
src/core/: config.rs  error.rs  events.rs  mod.rs
src/editor/: buffer.rs  commands.rs  cursor.rs  mod.rs  selection.rs  simple.rs
src/gui/: app.rs  editor.rs  file_tree.rs  menu.rs  mod.rs  statusbar.rs  tools.rs
src/platform/: mod.rs  unix.rs  wasi.rs  windows.rs
src/project/: manager.rs  mod.rs  xylux_project.rs
src/syntax/: alux_syntax.rs  highlighter.rs  lsp_client.rs  mod.rs  rust_analyzer.rs
src/ui/: layout.rs  mod.rs  terminal.rs  theme.rs
src/ui/components/: editor.rs  file_explorer.rs  mod.rs
xtask/: Cargo.toml  README.md
xtask/src/: count_loc.rs  main.rs
