[package]
name = "xylux-ide"
version = "0.0.1"
authors = ["Equipo Xylux"]
license = "Xylux-Proprietary"
edition = "2021"
description = "A lightweight IDE for game development with the Xylux engine, preparing for Alux scripting."
repository = "https://github.com/xylux/xylux-ide"
readme = "README.md"
keywords = ["ide", "game-development", "rust", "xylux"]
categories = ["development-tools", "game-development"]
include = ["src/**/*", "Cargo.toml", "LICENSE.md", "README.md"]

[dependencies]
unicode-width = "0.2.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.174"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", default-features = false, features = ["wincon"] }
winapi-util = "0.1.9"

[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
lto = true
strip = true
codegen-units = 1

[lints.rust]
explicit_outlives_requirements = "deny"
let-underscore-drop = "deny"
meta-variable-misuse = "deny"
non_ascii_idents = "deny"
non-local-definitions = "deny"
redundant-imports = "deny"
redundant-lifetimes = "deny"
single-use-lifetimes = "deny"
trivial-casts = "deny"
trivial_numeric_casts = "deny"
unit-bindings = "deny"
unnameable-types = "deny"
unsafe-code = "deny"
unused-import-braces = "deny"
unused-lifetimes = "deny"
unused-macro-rules = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
redundant_clone = "deny"
manual_memcpy = "deny"
cast_lossless = "deny"
float_cmp = "deny"
allow_attributes = "deny"
as_underscore = "deny"
assertions_on_result_states = "deny"
cfg_not_test = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
dbg_macro = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
exit = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
format_push_string = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
infinite_loop = "deny"
map_with_unused_argument_over_ranges = "deny"
mem_forget = "deny"
missing_assert_message = "deny"
mixed_read_write_in_expression = "deny"
mod_module_files = "deny"
module_name_repetitions = "deny"
multiple_inherent_impl = "deny"
mutex_atomic = "deny"
needless_raw_strings = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
semicolon_outside_block = "deny"
separated_literal_suffix = "deny"
str_to_string = "deny"
unused_result_ok = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"